# TrackerApp

./: .gitignore  CMakeLists.txt  README.md  images.qrc  main.cpp  resources.qrc
Application/: addtransactionform.cpp  addtransactionform.h  addtransactionform.ui  edittransactiondialog.cpp  edittransactiondialog.h  edittransactiondialog.ui  startscreen.cpp  startscreen.h  startscreen.ui  trackerapp.cpp  trackerapp.h  trackerapp.ui
databaseManager/: dbconnection.h  dbgetter.cpp  dbgetter.h  dbsetter.h
interface/: addtransactionform.cpp  addtransactionform.h  addtransactionform.ui  edittransactiondialog.h  edittransactiondialog.ui  startscreen.cpp  startscreen.h  startscreen.ui  trackerapp.cpp  trackerapp.h  trackerapp.ui
libs/: transaction.cpp  transaction.h
libs/Utilities/: dbconnection.cpp  dbconnection.h  dbgetter.h  dbsetter.cpp  dbsetter.h  global.cpp  global.h
templates/: operation.h  transaction.h
